First pass at implementing sharing
